Create Navbar Component

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="A simple application to search GitHub users"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script src="https://kit.fontawesome.com/c9b43d3d94.js" crossorigin="anonymous"></script>
     <title>GitHub Finder</title>
   </head>
   <body>
